--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -34,7 +34,7 @@ OMNETPP_TKENV_DIR=@OMNETPP_TKENV_DIR@
 
 OBJS = tkapp$(TKENV_EMBED_SUFFIX).o tkcmd.o tklib.o inspector.o \
        inspfactory.o objinsp.o modinsp.o statinsp.o structinsp.o \
-       arrow.o
+       arrow.o visitor.o tkutil.o
 
 #
 # Automatic rules
