--- a/samples/fddi/omnetpp.ini
+++ b/samples/fddi/omnetpp.ini
@@ -1,8 +1,16 @@
 [General]
 ini-warnings = no
 
-;distributed = yes
-distributed = no
+parallel-simulation=true
+fname-append-host=true
+parsim-communications-class="cFileCommunications"
+# parsim-communications-class="cNamedPipeCommunications"
+# parsim-communications-class="cMPICommunications"
+# parsim-synchronization-class= "cNoSynchronization"
+parsim-synchronization-class= "cNullMessageProtocol"
+# parsim-synchronization-class= "cISPEventLogger"
+# parsim-synchronization-class= "cIdealSimulationProtocol"
+
 warnings= yes
 sim-time-limit = 200s
 ;cpu-time-limit=
@@ -15,23 +23,13 @@ express-mode = yes
 status-frequency = 50000
 performance-display = no
 
-[Slaves]
-;write-slavelog = no
-write-slavelog = yes
-slavelog-file = slave.log
-module-messages = no
 
-;modmsgs-to-console = yes
-;infomsgs-to-console = yes
-errmsgs-to-console = no
-infomsgs-to-console = no
+[Partitioning]
+#TUBw.NRing*.partition-id=0
+*.partition-id=1
 
 [Tkenv]
 default-run=1
-
-[Machines]
-NR_host = whale
-SR_host = dolphin
 
 [Parameters]
 TUBw.NRLoadControlFile = "nr_lctrl"
