--- a/src/envir/Makefile.in
+++ b/src/envir/Makefile.in
@@ -75,17 +75,18 @@ akoutvectormgr.o: akoutvectormgr.cc \
   ../../include/util.h \
   ../../include/cexception.h \
   ../../include/carray.h \
-  ../../include/chead.h \
+  ../../include/globals.h \
   args.h \
   envdefs.h \
   ../../include/envirext.h \
+  ../../include/onstartup.h \
   ../../include/errmsg.h \
   ../../include/cmsgheap.h \
   ../../include/ccoroutine.h \
   ../../include/coutvect.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
-  ../../include/onstartup.h \
+  ../../include/cdefaultlist.h \
   ../../include/ctypes.h \
   filemgrs.h
 args.o: args.cc \
@@ -100,8 +101,6 @@ cenvir.o: cenvir.cc \
   omnetapp.h \
   appreg.h \
   ../../include/cmodule.h \
-  ../../include/cnetmod.h \
-  slaveapp.h \
   speedmtr.h \
   filemgrs.h \
   envdefs.h \
@@ -112,13 +111,14 @@ cenvir.o: cenvir.cc \
   ../../include/util.h \
   ../../include/cexception.h \
   ../../include/carray.h \
-  ../../include/chead.h \
+  ../../include/globals.h \
   ../../include/envirext.h \
   ../../include/onstartup.h \
   ../../include/ccoroutine.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
   ../../include/csimul.h \
+  ../../include/cdefaultlist.h \
   ../../include/errmsg.h \
   ../../include/cmsgheap.h \
   ../../include/coutvect.h
@@ -148,16 +148,17 @@ filemgrs.o: filemgrs.cc \
   ../../include/cexception.h \
   envdefs.h \
   ../../include/carray.h \
-  ../../include/chead.h \
+  ../../include/globals.h \
   args.h \
   ../../include/envirext.h \
+  ../../include/onstartup.h \
   ../../include/errmsg.h \
   ../../include/cmsgheap.h \
   ../../include/ccoroutine.h \
   ../../include/coutvect.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
-  ../../include/onstartup.h \
+  ../../include/cdefaultlist.h \
   ../../include/ctypes.h
 main.o: main.cc \
   ../../include/cobject.h \
@@ -165,11 +166,11 @@ main.o: main.cc \
   ../../include/random.h \
   ../../include/cenvir.h \
   ../../include/onstartup.h \
+  ../../include/defs.h \
   ../../include/util.h \
   ../../include/cexception.h \
-  ../../include/defs.h \
   ../../include/errmsg.h \
-  ../../include/chead.h \
+  ../../include/globals.h \
   ../../include/cmsgheap.h \
   ../../include/ccoroutine.h \
   ../../include/coutvect.h \
@@ -182,24 +183,26 @@ omnetapp.o: omnetapp.cc \
   ../../include/ctypes.h \
   ../../include/ccoroutine.h \
   ../../include/csimul.h \
+  ../../include/cscheduler.h \
   ../../include/cpar.h \
-  ../../include/cnetmod.h \
   ../../include/random.h \
+  ../../include/cmodule.h \
   envdefs.h \
   ../../include/defs.h \
   ../../include/carray.h \
-  ../../include/chead.h \
+  ../../include/globals.h \
   ../../include/cenvir.h \
   ../../include/cexception.h \
   ../../include/envirext.h \
   ../../include/cobject.h \
   ../../include/util.h \
+  ../../include/onstartup.h \
   ../../include/errmsg.h \
   ../../include/cmsgheap.h \
   ../../include/coutvect.h \
-  ../../include/cmodule.h \
   ../../include/cqueue.h \
-  ../../include/cgate.h
+  ../../include/cgate.h \
+  ../../include/cdefaultlist.h
 patmatch.o: patmatch.cc \
   patmatch.h \
   ../../include/defs.h \
@@ -214,42 +217,17 @@ platdep.o: platdep.cc \
 seeds.o: seeds.cc \
   omnetapp.h \
   ../../include/carray.h \
-  ../../include/chead.h \
+  ../../include/globals.h \
   ../../include/cenvir.h \
   ../../include/cexception.h \
   args.h \
   envdefs.h \
   ../../include/envirext.h \
   ../../include/cobject.h \
-  ../../include/util.h \
   ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/onstartup.h \
   ../../include/cpar.h
-slaveapp.o: slaveapp.cc \
-  slaveapp.h \
-  cinifile.h \
-  ../../include/csimul.h \
-  ../../include/cnetmod.h \
-  appreg.h \
-  envdefs.h \
-  omnetapp.h \
-  ../../include/defs.h \
-  ../../include/carray.h \
-  ../../include/chead.h \
-  ../../include/cenvir.h \
-  ../../include/cexception.h \
-  args.h \
-  ../../include/envirext.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/cpar.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/ccoroutine.h \
-  ../../include/coutvect.h \
-  ../../include/cmodule.h \
-  ../../include/cqueue.h \
-  ../../include/cgate.h \
-  ../../include/onstartup.h
 speedmtr.o: speedmtr.cc \
   speedmtr.h \
   ../../include/defs.h \
