--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -77,6 +77,11 @@ clean:
 	rm -f *.o lex.yy.c ebnf.tab.c ebnf.tab.h nedc nedtool *_n.cc
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
+ebnf.tab.o: ebnf.tab.c \
+  ebnf.h \
+  ebnfcfg.h \
+  jar_func.h \
+  jar_lib.h
 jar.o: jar.c \
   jar_func.h \
   jar_lib.h \
@@ -92,3 +97,9 @@ jar_mem.o: jar_mem.c \
 jar_mod.o: jar_mod.c \
   jar_func.h \
   jar_lib.h
+lex.yy.o: lex.yy.c \
+  ./unistd.h \
+  ebnf.h \
+  ebnf.tab.h \
+  ebnfcfg.h \
+  jar_func.h
